syntax = "proto3";

package pkg.greetingservice.v1;
option go_package = "github.com/nghialv/gateway/pkg/greetingservice/v1";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "Greeting";
        version: "1.0";
    };
    schemes: HTTP;
    schemes: HTTPS;
    consumes: "application/json";
    produces: "application/json";
};

service GreetingService {
    rpc SayHello(SayHelloRequest) returns (SayHelloResponse) {
        option (google.api.http) = {
            post: "/v1/greeting/sayhello"
            body: "*"
        };
    }
}

message SayHelloRequest {
    string name = 1 [(validate.rules).string.min_len = 1];
}

message SayHelloResponse {
    string message = 1 [(validate.rules).string.min_len = 1];
}
